Closed Bug 417500 Opened 17 years ago Closed 17 years ago

Crash [@ CAccessibleText::get_attributes ]

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

Details

(Keywords: access, crash)

Crash Data

Attachments

(1 file)

Attached patch Fix crashSplinter Review
Attachment #303281 - Flags: review?(surkov.alexander)
Comment on attachment 303281 [details] [diff] [review] Fix crash though the patch doesn't make sense in long term game because text attribute patch removes this code. And I should merge it additionally :(
Attachment #303281 - Flags: review?(surkov.alexander) → review+
Attachment #303281 - Flags: approval1.9?
Comment on attachment 303281 [details] [diff] [review] Fix crash a=beltzner for 1.9
Attachment #303281 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Summary: Crash [ @ CAccessibleText::get_attributes ] → Crash [@ CAccessibleText::get_attributes ]
Crash Signature: [@ CAccessibleText::get_attributes ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: