bug 417500. Crash [ @ CAccessibleText::get_attributes ]. r=surkov, a=beltzner